crates/sui-graphql-macros/tests/compile/type_validation_invalid_suffix.rs
use sui_graphql_macros::Response;

#[derive(Response)]
struct R {
    #[field(path = "object.address[?]")]
    addr: String,
}

fn main() {}
